# T3C2-Path-GrowthOps

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  LICENSE  MODEL_CARD.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  research_claim.yml
.github/workflows/: ci.yml
docs/: AGENT_PROTOCOL.md  ALGORITHM_CARDS.md  ARCHITECTURE.md  CLAIM_REGISTER.md  RESEARCH_BOUNDARIES.md  ROADMAP.md  THREAT_MODEL.md  VALIDATION_PROTOCOL.md
research/: red_team_cases.json  submission_release_manifest.json
scripts/: export_validation_bundle.py
src/t3c2_path/: __init__.py  __main__.py  api.py  application.py  audit.py  cli.py  clocks.py  demo.py  domain.py  red_team.py  research.py
src/t3c2_path/agents/: __init__.py  contracts.py
src/t3c2_path/algorithms/: __init__.py  evidence_state.py  path_twin.py  safe_voi.py  safety_gate.py  service_effect.py  value_added.py
tests/: test_agent_contracts.py  test_api.py  test_audit.py  test_cli.py  test_clocks.py  test_domain_models.py  test_evidence_state.py  test_orchestrator.py  test_path_twin.py  test_research_validation.py  test_safe_voi.py  test_safety_gate.py  test_service_effect.py  test_value_added.py
