[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "t3c2-path-growthops"
version = "0.2.0"
description = "A research-grade, safety-gated GrowthOps engine for evidence-aware student development planning."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "T3C2 Path GrowthOps contributors" }]
keywords = ["education", "career-planning", "value-added", "causal-inference", "multi-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["pydantic>=2.13.4,<3"]

[project.urls]
Homepage = "https://github.com/Ring0321/T3C2-Path-GrowthOps"
Documentation = "https://github.com/Ring0321/T3C2-Path-GrowthOps/tree/main/docs"
Issues = "https://github.com/Ring0321/T3C2-Path-GrowthOps/issues"
Source = "https://github.com/Ring0321/T3C2-Path-GrowthOps"

[project.optional-dependencies]
api = ["fastapi>=0.139.2,<1", "uvicorn>=0.46,<1"]
research = ["numpy>=1.26,<3", "pandas>=2.2,<3", "scipy>=1.12,<2"]
dev = [
  "httpx>=0.27,<1",
  "pytest>=9.1.1,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "mypy>=1.10,<3",
]

[project.scripts]
t3c2-path = "t3c2_path.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/t3c2_path"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["t3c2_path"]

[tool.coverage.run]
branch = true
source = ["t3c2_path"]

[tool.coverage.report]
fail_under = 85
show_missing = true
